Here's the commented version of the code:

```c++
// Copyright 2020 gRPC authors.

#include "src/core/util/validation_errors.h"

#include <grpc/support/port_platform.h>
#include <inttypes.h>

#include <utility>

#include "absl/log/log.h"
#include "absl/status/status.h"
#include "absl/strings/str_cat.h"
#include "absl/strings/str_join.h"
#include "absl/strings/strip.h"

namespace grpc_core {

// Adds a new field to the current validation path.
// If this is the first field being pushed, removes any leading '.' from ext.
// The field is stored as a string in the fields_ vector.
void ValidationErrors::PushField(absl::string_view ext) {
  if (fields_.empty()) absl::ConsumePrefix(&ext, ".");
  fields_.emplace_back(std::string(ext));
}

// Removes the most recently added field from the validation path.
// Used to backtrack when moving back up in a hierarchical structure.
void ValidationErrors::PopField() { fields_.pop_back(); }

// Adds an error message for the current field path.
// Errors are stored in field_errors_ map with the joined field path as key.
// Limits the number of errors per field to max_error_count_.
void ValidationErrors::AddError(absl::string_view error) {
  auto key = absl::StrJoin(fields_, "");
  if (field_errors_[key].size() >= max_error_count_) {
    VLOG(2) << "Ignoring validation error: too many errors found ("
            << max_error_count_ << ")";
    return;
  }
  field_errors_[key].emplace_back(error);
}

// Checks if the current field path has any associated errors.
// Returns true if errors exist for the current field path.
bool ValidationErrors::FieldHasErrors() const {
  return field_errors_.find(absl::StrJoin(fields_, "")) != field_errors_.end();
}

// Converts the collected validation errors into an absl::Status object.
// Returns OK status if no errors were found.
// Otherwise returns a status with the given code and a formatted error message.
absl::Status ValidationErrors::status(absl::StatusCode code,
                                      absl::string_view prefix) const {
  if (field_errors_.empty()) return absl::OkStatus();
  return absl::Status(code, message(prefix));
}

// Generates a formatted error message containing all validation errors.
// The message includes the given prefix and lists all errors with their field paths.
// For fields with multiple errors, they are joined with semicolons.
std::string ValidationErrors::message(absl::string_view prefix) const {
  if (field_errors_.empty()) return "";
  std::vector<std::string> errors;
  for (const auto& [field, field_errors] : field_errors_) {
    if (field_errors.size() > 1) {
      errors.emplace_back(absl::StrCat("field:", field, " errors:[",
                                       absl::StrJoin(field_errors, "; "), "]"));
    } else {
      errors.emplace_back(
          absl::StrCat("field:", field, " error:", field_errors[0]));
    }
  }
  return absl::StrCat(prefix, ": [", absl::StrJoin(errors, "; "), "]");
}

}  // namespace grpc_core
```

The comments explain:
1. The purpose of each method
2. The key logic and edge cases
3. The data structures being used (fields_ vector and field_errors_ map)
4. The error handling and formatting behavior
5. The relationship between methods

The comments are concise but provide enough information for a developer to understand the functionality without having to analyze the implementation details.